<resources>
    <string name="app_name">Shop Medical</string>
    <string name="s_cero">0</string>
    <string name="s_buscar_sucursal">Buscando una sucursal cerca a tu ubicación</string>
    <string name="s_sucursal_not_found">Lo sentimos, no tenemos sucursales cerca a tu ubicación</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_aceptar">Aceptar</string>
    
    <!--Login-->
    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_olvidar_contra">¿Olvidaste contraseña?</string>
    <string name="h_contra">Contraseña</string>
    <string name="h_usuario">Usuario</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_forget_password">Damm</string>
    <string name="title_activity_add_direction">Agregar Dirección</string>

    <string name="temp_user">sandysv</string>
    <string name="temp_pas">sistemas</string>




    <!--Register-->
    <string name="s_register">Registrar Cliente</string>
    <string name="s_dni">*DNI</string>
    <string name="b_validate_dni">Validar DNI</string>
    <string name="s_name">*Nombre</string>
    <string name="s_name_r">*Nombre de ubicación</string>
    <string name="s_latname">*Apellidos</string>
    <string name="s_user">*Usuario</string>
    <string name="s_password">*Contraseña</string>
    <string name="s_dni_input">*Ingrese su DNI por favor</string>
    <string name="s_ruc">RUC</string>
    <string name="s_nombre_razon_social">Nombre/Razón Social</string>
    <string name="s_direccion">*Dirección</string>
    <string name="s_distrito">*Distrito</string>
    <string name="s_mapa">*Mapa</string>
    <string name="s_correo">*Correo</string>
    <string name="s_celular">*Teléfono Celular</string>
    <string name="btn_save">Guardar</string>
    <string name="s_referencia">Referencia</string>
    <string-array name="distritos">
        <item>Seleccionar</item>
        <item>Breña</item>
        <item>Jesús Maria</item>
        <item>Pueblo Libre</item>
        <item>San Isidro</item>
        <item>Lince</item>
        <item>Miraflores</item>
        <item>La Molina</item>
    </string-array>
    <string name="input_dni">Obtener Datos</string>
    <string name="error_field">Ingrese este campo</string>


    <!--DashboardActivity-->
    <string name="s_presentacion">Presentación de la Farmacia</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--ForgetPasswordActivity-->
    <string name="s_forget_indication">Introduzca su correo electrónico y le enviaremos su usuario y una nueva contraseña</string>
    <string name="b_enviar">Enviar</string>

    <!-- SearchFragment-->
    <string name="btn_marca">Marca</string>
    <string name="btn_generico">Generico</string>

    <!--Actualizar Información Personal-->
    <string name="s_update_informacion">Actualizar Información Personal</string>

    <!-- Buscar Medicamento -->
    <string name="s_mayor_presicion">Para una mejor precisión en nuestra busqueda por favor indiquenos hacia donde va el pedido</string>
    <string name="b_ubicacion_actual">Usar mi ubicación actual</string>
    <string name="action_search">¿Qué necesitas?</string>
    <string name="s_buscar">Buscar</string>
    <string name="b_agregar_direccion">Agregar Dirección</string>
    <string name="s_mis_direcciones">Mis Direcciones:</string>

    <!--Carrito de Compras-->
    <string name="s_carrito_vacio">Carrito de Compras Vacío</string>
    <string name="s_incluye_igv">*Montos incluyen IGV </string>
    <string name="s_efectivo_soles">Efectivo en Soles S/.:</string>
    <string name="s_vuelto">Vuelto S/.:</string>
    <string name="b_enviar_pedido">Enviar Pedido</string>
    <string name="s_monto_invalido">Monto Invalido</string>
    <string name="b_boleta">Boleta</string>
    <string name="b_factura">Factura</string>
    <string name="title_activity_ruc">RUCActivity</string>
    <string name="s_comprobante_factura">Comprobante de Pago Factura</string>
    <string name="s_ingrese_ruc">*Ingrese su RUC por favor</string>
    <string name="b_validar_ruc">Validar RUC</string>
    <string name="b_validar_ruc_back">Ingresar nuevo RUC</string>
    <string name="s_razon_social">Razón Social:</string>
    <string name="s_nombre_comercial">Nombre Comercial:</string>
    <string name="s_direccion_ruc">Dirección:</string>


    <!-- Sintomas Frecuentes-->
    <string name="t_agotamiento">Agotamiento</string>
    <string name="t_cabeza">Dolor de Cabeza</string>
    <string name="t_estomago">Dolor Estomacal</string>
    <string name="t_muscular">Dolor Muscular</string>
    <string name="t_resfriado">Resfriado</string>
    <string name="t_estre">Estreñimiento</string>
    <string name="t_tos">Tos</string>
    <string name="t_migranha">Migraña</string>

    <!-- Detalle Pedido-->
    <string name="title_activity_detalle_pedido">Detalle de Pedido</string>
    <string name="s_cancelar_pedido">Cancelar Pedido</string>


    <string name="s_current_version">V. 1.0</string>


</resources>
