<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.alvardev.demos.deliverymedicamentos.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_register"
        android:textSize="21sp"
        android:padding="16dp"
        android:textColor="@color/bg_boton"
        android:gravity="center"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_name"/>

    <EditText
        style="@style/EditTextStyle"
        android:inputType="textPersonName"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_latname"/>

    <EditText
        style="@style/EditTextStyle"
        android:inputType="textPersonName"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_user"/>

    <EditText
        style="@style/EditTextStyle"
        android:inputType="textPersonName"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_password"/>

    <EditText
        style="@style/EditTextStyle"
        android:inputType="textPassword"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_dni"/>

    <EditText
        style="@style/EditTextStyle"
        android:inputType="number"
        android:maxLength="8"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_ruc"/>

    <EditText
        style="@style/EditTextStyle"
        android:maxLength="11"
        android:inputType="number"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_nombre_razon_social"/>

    <EditText
        style="@style/EditTextStyle"
        android:inputType="textPersonName"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_direccion"/>

    <EditText
        style="@style/EditTextStyle"
        android:inputType="textPersonName"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_distrito"/>

    <Spinner
        android:id="@+id/spiDistritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_correo"/>

    <EditText
        style="@style/EditTextStyle"
        android:inputType="textEmailAddress"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/s_celular"/>

    <EditText
        style="@style/EditTextStyle"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnSaveRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_save"
        android:background="@color/bg_boton"
        android:textColor="@color/white"/>

</LinearLayout>
</ScrollView>