<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:animateLayoutChanges="true"
    tools:context="com.alvardev.demos.shopmedical.view.fragment.SearchResultFragment">

    <LinearLayout
        android:id="@+id/llaOtrasOpciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:background="@color/bg_celeste">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_boton"
                android:textColor="@color/white"
                android:text="@string/btn_marca" />

            <View
                android:id="@+id/viewMarca"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnGenerico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_boton"
                android:textColor="@color/white"
                android:text="@string/btn_generico" />

            <View
                android:id="@+id/viewGenerico"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/bg_boton"/>

        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/lviResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbars="none"
        android:layout_below="@+id/llaOtrasOpciones"
        android:layout_above="@+id/llaSearch"/>

    <View
        android:id="@+id/vieLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/plomo"
        android:layout_above="@id/llaSearch"/>

    <LinearLayout
        android:id="@+id/llaSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/eteText"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:inputType="textPersonName"
            android:hint="@string/action_search"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iviBuscar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/buscar"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

</RelativeLayout>

